--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "test": "tests"
   },
   "dependencies": {
-    "@aws-crypto/client-node": "0.1.0-preview.4"
+    "aws-sdk": "^2.532.0"
   }
 }
